--- a/1.0.1/plugin.css
+++ b/1.0.1/plugin.css
@@ -1,22 +1,13 @@
-.qalert {
-  z-index:5;
-  background:rgba(0,0,0,0.7);
-  color:#ffffff;
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  visibility: visible;
-  opacity:1;
-  padding:30px 30px;
-  font-size:0.21rem;
-}
-.qalert.visuallyhidden {
-   -webkit-transition:all 6s;
-   transition:all 6s;
-   opacity:0;
-}
-.qalert.hidden{
-  display:none;
-}
+  .qdropdownselect .active{
+    background:blue;
+  }
+  .qdropdownselect{
+    background:#ffffff;
+    border: 1px solid #ccc;
+    line-height:20px;
+    height:300px;
+    overflow:scroll;
+  }
+  .qdropdownselect .qitem:hover{
+   background:#999999;
+  }
