--- a/1.0.1/plugin.css
+++ b/1.0.1/plugin.css
@@ -1,12 +1,13 @@
-  .qdropdownselect .active{
-    background:blue;
-  }
   .qdropdownselect{
     background:#ffffff;
     border: 1px solid #ccc;
     line-height:20px;
     height:300px;
     overflow:scroll;
+    z-index:1;
+  }
+  .qdropdownselect .active{
+    background:blue;
   }
   .qdropdownselect .qitem:hover{
    background:#999999;
